syntax = "proto3";

package hnclone;

option java_package = "com.asadmshah.hnclone.models";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message RefreshSession {
    uint32 id = 1;
    string uuid = 2;
    uint64 issued = 3;
    uint64 expire = 4;
}